# deteccion_fraude

./: .gitignore  02_Data_Cleaning_and_Preprocessing_selection_feature.ipynb  Makefile  README.md  estudio_de__las_variables.ipynb  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01_Exploratiry_Data_Analysis copy.ipynb  01_Exploratiry_Data_Analysis.ipynb  02_Data_Cleaning_and_Preprocessing.ipynb  02_Data_Cleaning_and_Preprocessing_selection_feature.ipynb  03_Feature_Selection.ipynb  04_modeling.ipynb  05_Hyperparameter_Tunning.ipynb  06_model_Evaluation_and_Validation.ipynb  07_Deployment_and_Monitoring.ipynb  08_Documentation_and_Reporting.ipynb  1-EDA.ipynb
