[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "detecci\u00f3n_de_fraude"
version = "0.0.1"
description = "detectar fraude en las transacciones de los clientes?"
authors = [
  { name = "Jos\u00e9 Florentino Ramos" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["detección_de_fraude"]
force_sort_within_sections = true
